create model plant | install active_storage
able to create new plant with pic and edit and delete

--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,2 +1,6 @@
-<p class="notice"><%= notice %></p>
+<%
+=begin%>
+ <p class="notice"><%= notice %></p> 
+<%
+=end%>
 <p class="alert"><%= alert %></p>
