--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,12 @@
 <div class="logo"></div>
 <nav>
     <ul>
-        <% if current_user %>
+        <% if !current_user %>
+            <li> Du bist nicht eingeloggt!</li>
             <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
             <li> <%= link_to 'Login', new_user_session_path %> </li>
         <% else %>
+            <li> Du bist eingeloggt <%= current_user.id %> - <%=current_user.nickName %> </li>
             <li> <%= link_to 'My Plants', plants_path %> </li>
             <li> <%= button_to 'Logout', destroy_user_session_path, method: :delete %> </li>
         <% end %>
