--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,12 @@
     <ul>
         <% if !current_user %>
             <li> Du bist nicht eingeloggt!</li>
-            <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
-            <li> <%= link_to 'Login', new_user_session_path %> </li>
+            <li> <%= link_to 'Sign up',register_path %> </li>
+            <li> <%= link_to 'Login', login_path %> </li>
         <% else %>
             <li> Du bist eingeloggt <%= current_user.id %> - <%=current_user.nickName %> </li>
             <li> <%= link_to 'My Plants', plants_path %> </li>
-            <li> <%= button_to 'Logout', destroy_user_session_path, method: :delete %> </li>
+            <li> <%= button_to 'Logout', logout_path, method: :delete %> </li>
         <% end %>
     <ul>
 </header>
