style sign up page

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,87 +1,4 @@
 @import "fonts";
 @import "variables";
 @import "global";
-
-// body {
-//   background-color: $color__white;
-//   color: $color__black;
-//   font-family: Mukta, verdana, sans-serif;
-//   margin: 2em;
-//   font-size: 1.2em;
-//   line-height: 1.3em;
-// }
-
-// p, ol, ul, td {
-//   font-family: Mukta, verdana, sans-serif;
-//   font-size: 1em;
-//   line-height: 1.2em;
-// }
-
-// // pre {
-// //   background-color: #eee;
-// //   padding: 10px;
-// //   font-size: 11px;
-// // }
-
-// a {
-//   color: $color__black;
-
-//   &:visited {
-//     color: $color__green--light;
-//   }
-
-//   &:hover {
-//     color: $color__green--light;
-//   }
-// }
-
-// th {
-//   padding-bottom: 5px;
-// }
-
-// td {
-//   padding: 0 5px 7px;
-// }
-
-// div {
-//   &.field, &.actions {
-//     margin-bottom: 10px;
-//   }
-// }
-
-// #notice {
-//   color: $color__green--dark;
-// }
-
-// .field_with_errors {
-//   padding: 2px;
-//   background-color: red;
-//   display: table;
-// }
-
-// #error_explanation {
-//   width: 450px;
-//   border: 2px solid red;
-//   padding: 7px 7px 0;
-//   margin-bottom: 20px;
-//   background-color: #f0f0f0;
-
-//   h2 {
-//     text-align: left;
-//     font-weight: bold;
-//     padding: 5px 5px 5px 15px;
-//     font-size: 12px;
-//     margin: -7px -7px 0;
-//     background-color: #c00;
-//     color: #fff;
-//   }
-
-//   ul li {
-//     font-size: 12px;
-//     list-style: square;
-//   }
-// }
-
-// label {
-//   display: block;
-// }
+@import "pages";
