--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<section class="page-content">
+<h1>Registrieren</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -12,27 +13,30 @@
 <%
 =end%>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="new_user__container new_user__mail">
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
+  <div class="new_user__container new_user__pw">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <p class="new_user__pw__p">(mind. <%= @minimum_password_length %> Zeichen)</p>
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="new_user__container new_user__pw-confirmation">
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="new_user__submit-button">
+    <%= f.submit "Anmelden" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="link-to-login">
+  <p>Du hast schon einen Acount? Hier gehts zum  <%= render "devise/shared/links" %></p>
+</div>
+</section>
