--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -124,3 +124,13 @@ label {
     }
   }
 }
+
+h1{
+  font-weight: 800;
+  font-size: 2.2rem;
+  line-height: 2.6rem;
+}
+
+.page-content{
+  margin: 2.5rem;
+}
