extract general form styling

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -134,3 +134,87 @@ h1{
 .page-content{
   margin: 2.5rem;
 }
+
+// Forms
+.new_user{
+
+  &__container{
+    margin: 2rem 0;
+    width: 20rem;
+    height: auto;
+    
+    label{
+      color: $color__black;
+      width: 100%;
+      font-size: 1.5rem;
+      line-height: 2.75rem;
+      font-weight: 400;
+    }
+    input{
+      width: 100%;
+      border: 0;
+      outline: 0;
+      padding: 0.5rem 0;
+      border-bottom: 2px solid $color__black;
+      box-shadow: none;
+      color: #111;
+      font-size: 1rem;
+      font-weight: 300;
+
+      &:invalid {
+        outline: 0;
+        color: $color__pink--dark;
+        border-color: $color__pink--dark;
+      }
+      &:focus,
+      &:valid {
+        border-color: $color__green--light;
+      }
+      &:focus~label,
+      &:valid~label {
+        font-size: 1.2rem;
+        top: -24px;
+        color: $color__green--light;
+      }
+    }
+  }
+
+  &__mail{
+    margin-top: 1.5rem;
+  }
+
+  &__pw{
+    label{
+      display: inline-block;
+      width: fit-content;
+    }
+    &__p{
+      font-size: 1rem;
+      line-height: 1.2rem;
+      font-weight: 300;
+      display: inline-block;
+      width: fit-content;
+    }
+    input{
+      display: block;
+    }
+  }
+  
+  &__pw-confirmation{
+  }
+
+  &__submit-button{
+    input{
+      background-color: $color__green--light;
+      color: $color__white;
+      padding: 0.5rem 0.8rem;
+      transition: 300ms ease-in-out;
+      text-transform: uppercase;
+      border-radius: 2px;
+
+      &:hover{
+        background-color: $color__green--dark;
+      }
+    }
+  }
+}
