--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -170,12 +170,6 @@ h1{
       &:valid {
         border-color: $color__green--light;
       }
-      &:focus~label,
-      &:valid~label {
-        font-size: 1.2rem;
-        top: -24px;
-        color: $color__green--light;
-      }
     }
   }
 
@@ -199,10 +193,17 @@ h1{
       display: block;
     }
   }
-  
   &__pw-confirmation{
   }
-
+  &__remember-me{
+    
+    label, input{
+      display: inline-block;
+      width: fit-content;
+      color: $color__black;
+      font-size: 1.2rem;
+    }
+  }
   &__submit-button{
     input{
       background-color: $color__green--light;
