--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -1,16 +1,16 @@
 @import "fonts";
 @import "variables";
   
-.links{
-    margin: 2rem 0;
+// .links{
+//     margin: 2rem 0;
 
-      a{
-        color: $color__black;
-        text-decoration: none;
-        transition: 50ms ease-in-out;
+//       a{
+//         color: $color__black;
+//         text-decoration: none;
+//         transition: 50ms ease-in-out;
         
-        &:hover{
-            color: $color__green--dark;
-        }
-      }
-  }
+//         &:hover{
+//             color: $color__green--dark;
+//         }
+//       }
+//   }
