--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="new_user__submit-button">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Passwort zurücksetzen" %>
   </div>
 <% end %>
 
