--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<section class="page-content">
+<h2>Hey <%= @resource.email %>!</h2>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>EinLink zur Änderung deines Passwortes wurde angefragt. Über den unten stehenden Link kannst du es ändern.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Passwort Ändern', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Solltest du das nicht gewollt haben, bitte ignoriere diese E-Mail.</p>
+<p>Dein Passwort wird sich nicht ändern solang du es nicht über den oben stehenden Link anpasst.</p>
+</section>
