--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -130,6 +130,16 @@ h1{
   font-size: 2.2rem;
   line-height: 2.6rem;
 }
+h2{
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 2.4rem;
+}
+h3{
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 2rem;
+}
 
 .page-content{
   margin: 2.5rem;
