--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<section class="page-content">
+<h2>Hey <%= @email %>!</h2>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Über folgenden Link kannst du deine E-Mail Adresse bestätigen: </p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to 'Account bestätigen', confirmation_url(@resource, confirmation_token: @token) %></p>
+</section>
