--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @email %>!</p>
+<section class="page-content">
+<h2>Hey <%= @email %>!</h2>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>Deine E-Mail Adresse wird zu <%= @resource.unconfirmed_email %> geändert.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>Deine E-Mail Adresse wurde geändert zu: <%= @resource.email %>.</p>
 <% end %>
+</section>
