--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<section class="page-content">
+<h2>Hey <%= @resource.email %>!</h2>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>Dein Passwort wurde geändert.</p>
+</section>
