--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<section class="page-content">
+<p>Hey <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Dein Account wurde aufgrund einer exzessiven Anzahl an Login Versuchen gesperrt.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Über diesen Link kannst du ihn wieder entsperren:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Account entsperren', unlock_url(@resource, unlock_token: @token) %></p>
+</section>
