--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -3,50 +3,50 @@
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/mukta-v6-latin-300.eot'); /* IE9 Compat Modes */
+    src: url('./../fonts/mukta-v6-latin-300.eot'); /* IE9 Compat Modes */
     src: local('Mukta Light'), local('Mukta-Light'),
-         url('../fonts/mukta-v6-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v6-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v6-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v6-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v6-latin-300.svg#Mukta') format('svg'); /* Legacy iOS */
+         url('./../fonts/mukta-v6-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./../fonts/mukta-v6-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./../fonts/mukta-v6-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('./../fonts/mukta-v6-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./../fonts/mukta-v6-latin-300.svg#Mukta') format('svg'); /* Legacy iOS */
   }
   /* mukta-regular - latin */
   @font-face {
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/mukta-v6-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('./../fonts/mukta-v6-latin-regular.eot'); /* IE9 Compat Modes */
     src: local('Mukta Regular'), local('Mukta-Regular'),
-         url('../fonts/mukta-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v6-latin-regular.svg#Mukta') format('svg'); /* Legacy iOS */
+         url('./../fonts/mukta-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./../fonts/mukta-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./../fonts/mukta-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./../fonts/mukta-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./../fonts/mukta-v6-latin-regular.svg#Mukta') format('svg'); /* Legacy iOS */
   }
   /* mukta-600 - latin */
   @font-face {
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/mukta-v6-latin-600.eot'); /* IE9 Compat Modes */
+    src: url('./../fonts/mukta-v6-latin-600.eot'); /* IE9 Compat Modes */
     src: local('Mukta SemiBold'), local('Mukta-SemiBold'),
-         url('../fonts/mukta-v6-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v6-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v6-latin-600.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v6-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v6-latin-600.svg#Mukta') format('svg'); /* Legacy iOS */
+         url('./../fonts/mukta-v6-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./../fonts/mukta-v6-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./../fonts/mukta-v6-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('./../fonts/mukta-v6-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./../fonts/mukta-v6-latin-600.svg#Mukta') format('svg'); /* Legacy iOS */
   }
   /* mukta-800 - latin */
   @font-face {
     font-family: 'Mukta';
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/mukta-v6-latin-800.eot'); /* IE9 Compat Modes */
+    src: url('./../fonts/mukta-v6-latin-800.eot'); /* IE9 Compat Modes */
     src: local('Mukta ExtraBold'), local('Mukta-ExtraBold'),
-         url('../fonts/mukta-v6-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/mukta-v6-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/mukta-v6-latin-800.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/mukta-v6-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/mukta-v6-latin-800.svg#Mukta') format('svg'); /* Legacy iOS */
+         url('./../fonts/mukta-v6-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./../fonts/mukta-v6-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./../fonts/mukta-v6-latin-800.woff') format('woff'), /* Modern Browsers */
+         url('./../fonts/mukta-v6-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./../fonts/mukta-v6-latin-800.svg#Mukta') format('svg'); /* Legacy iOS */
   }
