--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -4,13 +4,13 @@
 body {
   background-color: $color__white;
   color: $color__black;
-  font-family: Mukta, verdana, sans-serif;
+  font-family: 'Mukta', verdana, sans-serif;
   font-size: 1.2em;
   line-height: 1.3em;
 }
 
 p, ol, ul, td {
-  font-family: Mukta, verdana, sans-serif;
+  font-family: 'Mukta', verdana, sans-serif;
   font-size: 1em;
   line-height: 1.2em;
 }
