--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Resend unlock instructions</h2>
+<section class="page-content">
+<h1>Account entsperren</h1>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="new_user__container new_user__mail">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
+  <div class="new_user__submit-button">
+    <%= f.submit "Erneut senden" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</section>
