create link for Logo

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navigation">
-<div class="navigation__logo">PlantPal</div>
+<div class="navigation__logo"><%= link_to 'Plantpal', root_path, {:style=>'text-decoration: none; color:white'} %></div>
 <nav class="navigation__nav">
     <ul class="navigation__nav__ul">
         <% if !current_user %>
