--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -129,6 +129,12 @@ label {
   }
 }
 
+.button_to{
+  input[type="submit"]{
+    text-transform: uppercase;
+  }
+}
+
 h1{
   font-weight: 800;
   font-size: 2.2rem;
