style new plant page

--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Plant</h1>
+<section class="page-content new-plant">
+<h1 class="new_plant__h1">Neue Pflanze</h1>
 
 <%= render 'form', plant: @plant %>
 
-<%= link_to 'Back', plants_path %>
+<div class="links">
+    <%= link_to 'Zurück', plants_path %>
+</div>
+</section>
