--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: plant, local: true) do |form| %>
   <% if plant.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(plant.errors.count, "error") %> hat das Speichern der Pflanze verhindert:</h2>
+      <p><%= pluralize(plant.errors.count, "error") %> hat das Speichern der Pflanze verhindert:</p>
 
       <ul>
       <% plant.errors.full_messages.each do |message| %>
