add link to pictures

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,3 +8,5 @@ Füge deine Lieblinge einfach in deinem Profil hinzu und los gehts!
 Du erhältst Erinnerungen deine Pals zu gießen, sie ihn ein sonniges/schattiges Plätzchen zu stellen 
 und ihnen Liebe und Aufmerksamkeit zu schenken. Gärtnern war noch nie so einfach!</p>
 </section>
+
+<a href="/picture">Upload a Picture</a>
