--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -7,6 +7,13 @@ body {
   font-family: 'Mukta', verdana, sans-serif;
   font-size: 1.2em;
   line-height: 1.3em;
+
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
 }
 
 p, ol, ul, td {
@@ -101,17 +108,19 @@ label {
   }
 
   &__nav{
+    width: 100%;
     grid-column: 2/3;
-    justify-self: end;
-    margin-right: 2rem;
     text-transform: uppercase;
+    text-align: right;
 
     &__ul{
       list-style: none;
+      padding-right: 2rem;
       
       &__li{
         display: inline-block;
         margin: 1.2rem 0.8rem;
+        font-size: 1rem;
         
         a{
           text-decoration: none;
@@ -161,6 +170,10 @@ h3{
 
 .page-content{
   margin: 2.5rem;
+  display: grid;
+  justify-content: center;
+}
+.notice, .alert{
   display: grid;
   justify-content: center;
 }
@@ -260,4 +273,38 @@ h3{
           color: $color__green--dark;
       }
     }
+}
+
+@media only screen and (max-width:700px){
+
+  .navigation{
+    grid: 1fr;
+
+    &__logo{
+      grid-column: 1/2;
+      margin: 2rem auto 1.5rem;
+      text-align: center;
+      font-size: 3rem;
+    }
+
+    &__nav{
+      grid-column: 1/2;
+      text-align: center;
+
+      &__ul{
+        padding-right: 0;
+        margin-bottom: 1rem;
+
+        &__li{
+          margin: 0.6rem 0;
+          width: 100%;
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+
+  .new_user__container {
+    width: 16rem;
+  }
 }
