--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <section class="page-content home">
-<h1 class="page-content home__h1">Hey du!</h1>
+<h1 class="home__h1">Hey du!</h1>
 
-<h2 class="page-content home__h2">Erwecke deinen grünen Daumen mit PlantPal</h2>
+<h2 class="home__h2">Erwecke deinen grünen Daumen mit PlantPal</h2>
 
-<p class="page-content home__p">Wir helfen dir, dich richtig um deine Hauspflanzen zu kümmern. 
+<p class="home__p">Wir helfen dir, dich richtig um deine Hauspflanzen zu kümmern. 
 Füge deine Lieblinge einfach in deinem Profil hinzu und los gehts! 
 Du erhältst Erinnerungen deine Pals zu gießen, sie ihn ein sonniges/schattiges Plätzchen zu stellen 
 und ihnen Liebe und Aufmerksamkeit zu schenken. Gärtnern war noch nie so einfach!</p>
