--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,3 +12,6 @@ $color__yellow--light: #FFCF3F;
 $color__pink--dark: #B93E78;
 $color__pink--medium: #D991BA;
 $color__pink--light: #EBB9DF;
+:root {
+    --progress-level: 0%;
+}
