create and style plant detail page

--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,9 +1,9 @@
 <section class="page-content new-plant">
-<h1 class="new_plant__h1">Neue Pflanze</h1>
+<h1 class="new_plant__h1">Neuen Pal hinzufügen</h1>
 
 <%= render 'form', plant: @plant %>
 
 <div class="links">
-    <%= link_to 'Zurück', plants_path %>
+    <%= link_to 'zurück', plants_path %>
 </div>
 </section>
