--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -4,7 +4,7 @@
 <%= render 'form', plant: @plant %>
 
 <div class="links">
-    <%= link_to 'Zurück', plants_path %> |
+    <%= link_to 'zurück', plants_path %> |
     <%= link_to 'Pal anzeigen', @plant %>
 </div>
 </section>
