--- a/app/assets/stylesheets/pages/_show-plant.scss
+++ b/app/assets/stylesheets/pages/_show-plant.scss
@@ -8,12 +8,18 @@
     }
 
     &__love{
-        margin: 0 0 2rem 0;
+        margin: 0 0;
         justify-content: left;
 
         p:first-child{
             margin-right: 1rem;
+            font-weight: 600;
         }
+    }
+    
+    &__lovestatus{
+        margin: 0 0 2rem 0;
+        font-size: 1rem;
     }
 
     &__pic{
