create users controller | add custom field to devise:user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,14 +4,10 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <%
-=begin%>
  <div class="field">
-    <%= f.label :nickname %> <br />
-    <%= f.text_field :nickname %>
+    <%= f.label :nickName %> <br />
+    <%= f.text_field :nickName %>
   </div> 
-<%
-=end%>
 
   <div class="new_user__container new_user__mail">
     <%= f.label :email %>
