--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
- <div class="field">
+ <div class="new_user__container new_user__name">
     <%= f.label :nickName %> <br />
     <%= f.text_field :nickName %>
   </div> 
