--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -275,7 +275,45 @@ h3{
       }
     }
 }
+.link-button{
+  a{
+    background-color: $color__green--light;
+    color: $color__white;
+    padding: 0.5rem 0.8rem;
+    transition: 300ms ease-in-out;
+    text-transform: uppercase;
+    border-radius: 2px;
 
+    &:hover{
+      background-color: $color__green--dark;
+      color: $color__white;
+    }
+  }
+}
+
+// Water and Love bar
+.progress--water{
+  margin: 0 auto;
+  height: 2rem;
+  width: 100%;
+  background: linear-gradient(to right, $color__blue--dark var(--progress-level), $color__blue--light var(--progress-level));
+  box-shadow: 0px 7px 0.9rem rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+}
+.progress--love {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  p {
+      &:first-child {
+          align-self: flex-start;
+
+      }
+  }
+}
+
+// Media Queries
 @media only screen and (max-width:700px){
 
   .navigation{
