--- a/app/assets/stylesheets/pages/_myPlants.scss
+++ b/app/assets/stylesheets/pages/_myPlants.scss
@@ -1,44 +1,63 @@
 @import "fonts";
 @import "variables";
-  
-.allPlants {
-    margin: 20px 2%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
 
-    &__plant {
-        width: 32%;
-        height: auto;
-        text-decoration: none;
-        // overflow: hidden;
-        
-        &-image {
-            width: 100%;
-            object-fit: cover;
+.my-plants{
+    
+    &__allPlants {
+        margin: 20px 2%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-between;
+    
+        &__plant {
+            width: 32%;
+            height: auto;
+            text-decoration: none;
+            // overflow: hidden;
+            
+            &-image {
+                width: 100%;
+                object-fit: cover;
+            }
+
+            &__nickname{
+                font-size: 1.6rem;
+                line-height: 2rem;
+                text-align: center;
+                margin: 0.7rem 0 0.1rem;
+            }
+
+            &__love{
+                margin: 1rem 0;
+            }
+
+            &__water{
+                margin: 0.5rem 0 1rem 0;
+                
+            }
+
+            &--desc{
+                margin: 0.3rem 0;
+                font-size: 1rem;
+                line-height: 1.2rem;
+                text-align: center;
+
+                &:first-of-type{
+                    font-size: 1.2rem;
+                    line-height: 1.4rem;
+                    margin: 0;
+                }
+
+                &:last-child{
+                    margin: 0.3rem 0 5rem 0;
+                }
+            }
         }
     }
 }
 
-.progress--water{
-    margin: 0 auto;
-    height: 2rem;
-    width: 100%;
-    background: linear-gradient(to right, $color__blue--dark var(--progress-level), $color__blue--light var(--progress-level));
-    box-shadow: 0px 7px 0.9rem rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-}
-
-.progress--love {
+.link-button{
     display: flex;
-    justify-content: center;
-    width: 90%;
-    margin: 0 auto;
-    p {
-        &:first-child {
-            align-self: flex-start;
-
-        }
-    }
+    justify-content: flex-end;
 }
