--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -3,8 +3,8 @@
 
 <%= render 'form', plant: @plant %>
 
-<div class="links">
+<p class="links">
     <%= link_to 'zurück', plants_path %> |
     <%= link_to 'Pal anzeigen', @plant %>
-</div>
+</p>
 </section>
