--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -36,7 +36,7 @@
     <% end %>
   </section>
 
-  <div class="links link-button"> 
-    <%= link_to 'Pflanze hinzufügen', new_plant_path %>
+  <div class="links--dif"> 
+    <span class="link-button"><%= link_to 'Pflanze hinzufügen', new_plant_path %></span>
   </div>
 </section>
