--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -122,6 +122,11 @@ label {
         margin: 1.2rem 0.8rem;
         font-size: 1rem;
         
+        &--user{
+          text-transform: initial;
+          font-weight: 100;
+        }
+
         a{
           text-decoration: none;
           color: $color__white;
@@ -177,8 +182,6 @@ h3{
 #notice, .notice, .alert{
   display: grid;
   justify-content: center;
-  margin: 2rem 0 0;
-
 }
 
 // Forms
@@ -356,7 +359,11 @@ h3{
         &__li{
           margin: 0.6rem 0;
           width: 100%;
-          font-size: 1.5rem;
+          font-size: 1.3rem;
+          
+          &--user{
+            font-size: 1.1rem;
+          }
         }
       }
     }
