--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,11 @@
 <nav class="navigation__nav">
     <ul class="navigation__nav__ul">
         <% if !current_user %>
-            <li class="navigation__nav__ul__li"> Du bist nicht eingeloggt!</li>
+            <li class="navigation__nav__ul__li navigation__nav__ul__li--user"> Du bist nicht eingeloggt!</li>
             <li class="navigation__nav__ul__li"> <%= link_to 'Registrieren', new_user_registration_path %> </li>
             <li class="navigation__nav__ul__li"> <%= link_to 'Anmelden', new_user_session_path %> </li>
         <% else %>
-            <li class="navigation__nav__ul__li"> Hallo <%=current_user.nickName %>, du bist eingeloggt! </li>
+            <li class="navigation__nav__ul__li navigation__nav__ul__li--user"> Hey <%=current_user.nickName %>! </li>
             <li class="navigation__nav__ul__li"> <%= link_to 'Meine Pflanzen', plants_path %> </li>
             <li class="navigation__nav__ul__li"> <%= button_to 'Abmelden', destroy_user_session_path, method: :delete %> </li>
         <% end %>
