--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <li class="navigation__nav__ul__li"> <%= link_to 'Anmelden', new_user_session_path %> </li>
         <% else %>
             <li class="navigation__nav__ul__li navigation__nav__ul__li--user"> Hey <%=current_user.nickName %>! </li>
-            <li class="navigation__nav__ul__li"> <%= link_to 'Meine Pflanzen', plants_path %> </li>
+            <li class="navigation__nav__ul__li"> <%= link_to 'Meine Pflanzen', dashboard_path %> </li>
             <li class="navigation__nav__ul__li"> <%= button_to 'Abmelden', destroy_user_session_path, method: :delete %> </li>
         <% end %>
     <ul>
