update path to new page

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -48,7 +48,7 @@
   </ul>
 
   <div class="links--dif"> 
-    <%= link_to 'zurück', plants_path %>
+    <%= link_to 'zurück', dashboard_path %>
    <span class="link-button"> <%= link_to 'Pal bearbeiten', edit_plant_path(@plant) %></span>
   </div>
 </section>
