--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -4,6 +4,6 @@
 <%= render 'form', plant: @plant %>
 
 <div class="links">
-    <%= link_to 'zurück', plants_path %>
+    <%= link_to 'zurück', dashboard_path %>
 </div>
 </section>
