--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -35,7 +35,7 @@
   </div>
   
   <div class="show-plant__pic">
-    <%= link_to image_tag(@plant.image, style:'width:100%'), plants_path %>  
+    <%= link_to image_tag(@plant_image, style:'width:100%'), plants_path %>  
   </div> 
 
   <h2 class="show-plant__h2">Pflegehinweise:</h2>
