--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+  <div class="new_user__container new_user__nickName">
+    <%= f.label :nickName %>
+    <%= f.text_field :nickName, autofocus: true, autocomplete: "nickName" %>
+  </div>
+
   <div class="new_user__container new_user__mail">
     <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -29,6 +34,11 @@
   <div class="new_user__container new_user__pw-current">
     <%= f.label :current_password %> <i>(zur Bestätigung der Änderung)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
+  </div>
+
+  <div class="new_user__container new_user__photo">
+    <%= f.label :photo %>
+    <%= f.file_field :photo %>
   </div>
 
   <div class="new_user__submit-button">
