--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,15 +1,6 @@
 <section class="page-content my-plants">
   <p id="notice"><%= notice %></p>
   
-  <% 
-    @user = current_user
-    if @user.photo.attached?
-      @user_photo = polymorphic_url @user.photo
-    else
-      @user_photo = '/assets/default_user.jpg'
-    end
-  %>
-
   <h1 class="my-plants__h1">Meine Pals</h1>
 
   <div class="my-plants__user">
@@ -17,7 +8,9 @@
       <h2 class="my-plants__user__details__nickname"> <%= @user.nickName %></h2>
       <p class="my-plants__user__details__plantcount"> <%= @user.plants.count %> Pflanzen</p>
     </div>
-    <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :id=>'user_photo', :class=>'user-image', :style=>'border-radius:50%;') %>
+    <%= link_to edit_user_registration_path, {:class => 'user__image-a'} do %>
+      <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :class=>'user-image', :style=>'border-radius:50%;') %>
+    <% end %>
   </div>
 
   <section id='myPlants' class='my-plants__allPlants'>
