add picture to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
 <section class="page-content home">
 <h1 class="home__h1">Hey du!</h1>
 
+ <div class="home__pic">
+    <%= image_tag('plantpal_logo.png', type: 'image/png') %>
+</div> 
+
 <h2 class="home__h2">Erwecke deinen grünen Daumen mit PlantPal</h2>
 
 <p class="home__p">Wir helfen dir, dich richtig um deine Hauspflanzen zu kümmern. 
