--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,6 +15,12 @@
     &__p{
         max-width: 1000px;
     }
+    &__pic{
+        img{
+            width: 25%;
+            margin: 2rem 0 0.5rem;
+        }
+    }
 }
 
 @media only screen and (max-width:700px){
