--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <section class="page-content">
-<h1>Registrieren</h1>
+<h1>Werde ein Teil von PlantPal</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
  <div class="new_user__container new_user__name">
-    <%= f.label :nickName %> <br />
+    <%= f.label :nickName, 'Name' %>
     <%= f.text_field :nickName %>
   </div> 
 
   <div class="new_user__container new_user__mail">
-    <%= f.label :email %>
+    <%= f.label :email, 'E-Mail' %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="new_user__container new_user__pw">
-    <%= f.label :password %>
+    <%= f.label :password, 'Passwort' %>
     <% if @minimum_password_length %>
     <p class="new_user__pw__p">(mind. <%= @minimum_password_length %> Zeichen)</p>
     <% end %>
@@ -23,12 +23,13 @@
   </div>
 
   <div class="new_user__container new_user__pw-confirmation">
-    <%= f.label :password_confirmation %>
+    <%= f.label :password_confirmation, 'Passwort' %>
+    <p class="new_user__pw__p">(wiederholen)</p>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="new_user__submit-button">
-    <%= f.submit "Anmelden" %>
+    <%= f.submit "Registrieren" %>
   </div>
 <% end %>
 
