--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/alerts' %>
+    <%# <%= render 'layouts/alerts' %>
     <%= yield %>
   </body>
 </html>
