--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -1,4 +1,4 @@
-<section class="page-content">
+<section class="page-content edit-plant">
 <h1>Pal bearbeiten</h1>
 
 <%= render 'form', plant: @plant %>
