--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -55,6 +55,6 @@
   </div>
 
   <div class="new_user__submit-button">
-    <%= form.submit %>
+    <%= form.submit "Pal hinzufügen" %>
   </div>
 <% end %>
