--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,5 +1,5 @@
 <section class="page-content new-plant">
-<h1 class="new_plant__h1">Neuen Pal hinzufügen</h1>
+<h1 class="new_plant__h1">Ein neuer Pal in deiner Familie</h1>
 
 <%= render 'form', plant: @plant %>
 
