correct spelling mistakes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,6 +34,6 @@
 <% end %>
 
 <div class="link-to-login">
-  <p>Du hast schon einen Acount? Hier gehts zum  <%= render "devise/shared/links" %></p>
+  <p>Du hast schon einen Account? Hier gehts zum  <%= render "devise/shared/links" %></p>
 </div>
 </section>
