--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,6 @@
 
 <p class="home__p">Wir helfen dir, dich richtig um deine Hauspflanzen zu kümmern. 
 Füge deine Lieblinge einfach in deinem Profil hinzu und los gehts! 
-Du erhältst Erinnerungen deine Pals zu gießen, sie ihn ein sonniges/schattiges Plätzchen zu stellen 
+Du erhältst Erinnerungen deine Pals zu gießen, sie in ein sonniges/schattiges Plätzchen zu stellen 
 und ihnen Liebe und Aufmerksamkeit zu schenken. Gärtnern war noch nie so einfach!</p>
 </section>
